# 03-error-info

./: CHANGELOG.md  Cargo.toml  cliff.toml
error-code/: Cargo.toml  http.rest
error-code-derive/: Cargo.toml
error-code-derive/src/: lib.rs  to_error_info.rs
error-code/examples/: to_error_info_usage.rs  web.rs
error-code/src/: lib.rs
