[package]
name = "error-code-derive"
version = "0.1.0"
edition = "2021"
authors = ["Ethan <liu.zy.ethan@gmail.com>"]
license = "MIT or Apache-2.0"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.10"
proc-macro2 = "1.0.92"
quote = "1.0.38"
syn = { version = "2.0.93", features = ["extra-traits"] }
